[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Controls/BaseButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/ActionButtonContainer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Controls/BaseIconButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Icons/Edit.png" type="Texture" id=4]

[node name="ActionButtonContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -104.0
margin_bottom = -528.0
rect_min_size = Vector2( 920, 72 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 920.0
margin_bottom = 72.0
rect_min_size = Vector2( 888, 72 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 904.0
margin_bottom = 56.0
rect_min_size = Vector2( 888, 0 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalculateSellButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 800.0
margin_bottom = 40.0

[node name="EditButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 804.0
margin_right = 844.0

[node name="TextureRect" parent="MarginContainer/HBoxContainer/EditButton/MarginContainer" index="0"]
texture = ExtResource( 4 )

[node name="DeleteButton" parent="MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 848.0
margin_right = 888.0
[connection signal="ButtonClicked" from="MarginContainer/HBoxContainer/CalculateSellButton" to="." method="_on_CalculateSellButton_ButtonClicked"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_BaseIconButton_pressed"]

[editable path="MarginContainer/HBoxContainer/CalculateSellButton"]

[editable path="MarginContainer/HBoxContainer/EditButton"]

[editable path="MarginContainer/HBoxContainer/DeleteButton"]
